add landing page

--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>T4U Shop</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Welcome to T4U Shop</h1>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#products">Products</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>T4U | home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/styles/styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="main">
+        <nav>
+          <h2>Logo</h2>
+          <div class="nav2">
+            <h4>Home</h4>
+            <h4>Menu</h4>
+            <h4>About</h4>
+            <h4>Contact</h4>
+            <h4>feedback</h4>
+            <button>Sign In</button>
+            <i class="ri-menu-3-fill"></i>
+          </div>
+        </nav>
 
-  <section id="home">
-    <h2>About Us</h2>
-    <p>We provide high-quality products just for you!</p>
-  </section>
+        <div class="content">
+          <div class="left">
+            <h1>
+              Learn From the <span>coolest</span> coding platform in India.
+            </h1>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat
+              odio officiis obcaecati ut? Eligendi odit, perferendis omnis
+              debitis sit doloribus. Sunt, dolorum illum temporibus eligendi nam
+              minus voluptatem rerum magnam?
+            </p>
+            <button> Explore Now</button>
+          </div>
+          <div class="right">
+              <img src="assets/images/tea.jpg" >
+          </div>
+        </div>
+      </div>
+    </header>
 
-  <section id="products">
-    <h2>Our Products</h2>
-    <div class="product">
-      <img src="images/product1.jpg" alt="Product 1">
-      <h3>Product 1</h3>
-      <p>Description of product 1.</p>
-    </div>
-    <div class="product">
-      <img src="images/product2.jpg" alt="Product 2">
-      <h3>Product 2</h3>
-      <p>Description of product 2.</p>
-    </div>
-  </section>
-  
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: contact@t4u.com</p>
-    <p>Phone: 123-456-7890</p>
-  </section>
+    <section class="hero"></section>
 
-  <footer>
-    <p>&copy; 2024 T4U Shop</p>
-  </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
